--- a/FilmBackgroundExperimentSeeThrough.html
+++ b/FilmBackgroundExperimentSeeThrough.html
@@ -109,7 +109,25 @@ background: radial-gradient(circle at 50% 50%, rgba(38, 38, 38, 0.84) 99%, rgba(
 {
   0%   {opacity: 0;}
   100% {opacity: 1;}
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="P1" tags="" position="900,450" size="100,100">{{{
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript">//Mutes when you press the M key on a keyboard
+document.addEventListener("keydown", function (event) {
+    if (event.key.toLowerCase() === "m") {
+        mutePage();
+    }
+});
+
+// Mute a singular HTML5 element
+function muteMe(elem) {
+  if(elem.muted == true)
+  {elem.muted = false;}
+  else {elem.muted = true;}
+  }
+
+// Try to mute all video and audio elements on the page
+function mutePage() {
+    document.querySelectorAll("video, audio").forEach((elem) => muteMe(elem));
+}
+</script><tw-passagedata pid="1" name="P1" tags="" position="900,450" size="100,100">{{{
 &lt;!-- The video --&gt;
 &lt;video autoplay muted loop id=&quot;myVideo&quot;&gt;
   &lt;source src=&quot;https://ia800807.us.archive.org/0/items/quick-vid-3/Quick%20Vid%201.mp4&quot; type=&quot;video/mp4&quot;&gt;
