--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@ background: radial-gradient(circle at 50% 50%, rgba(38, 38, 38, 0.84) 99%, rgba(
 	](else-if: $guessDoorCode&#39;s (1) is &quot;son&quot;)[
 		&lt;!-- The video --&gt;
 &lt;video autoplay id=&quot;myVideo&quot; playsinline&gt;
-  &lt;source src=&quot;https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/R%20SON&quot; type=&quot;video/mp4&quot; playsinline&gt;
+  &lt;source src=&quot;https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/R%20SON.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
 &lt;/video&gt;
 	](else:)[
 	&lt;!-- The video --&gt;
 &lt;video autoplay id=&quot;myVideo&quot; playsinline&gt;
-  &lt;source src=&quot;https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/R%20GHOST&quot; type=&quot;video/mp4&quot; playsinline&gt;
+  &lt;source src=&quot;https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/R%20GHOST.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
 &lt;/video&gt;
 	]
 ]
