--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ background: radial-gradient(circle at 50% 50%, rgba(38, 38, 38, 0.84) 99%, rgba(
 window.audioElement = new Audio("https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/freaky%20music.mp3");
 audioElement.autoplay = true; // Auto play on the index page
 audioElement.id = "myAudio";
-//audioElement.crossOrigin = ''; //'anonymous' needed for local testing
+audioElement.crossOrigin = 'anonymous'; //'anonymous' needed for local testing
 audioElement.loop = true; // Optional, depending on your requirements
 
 // Create the AudioContext
