adding working compressor version

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ background: radial-gradient(circle at 50% 50%, rgba(38, 38, 38, 0.84) 99%, rgba(
 }
 
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">//Setting up the background music
-window.audioElement = new Audio("https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/freaky%20music.mp3");
+window.audioElement = new Audio("freaky%20music.mp3");
 audioElement.autoplay = true; // Auto play on the index page
 audioElement.id = "myAudio";
 audioElement.crossOrigin = 'anonymous'; //'anonymous' needed for local testing
