adding working compressor version

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ const video1 = document.getElementById('myVideo');
 (if: $guessDoorCode is (a:))[
 &lt;!-- The video --&gt;
 &lt;video id=&quot;myVideo&quot; autoplay playsinline&gt;
-  &lt;source src=&quot;https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/DUCKY.mp4&quot; type=&quot;video/mp4&quot; &gt;
+  &lt;source src=&quot;DUCKY.mp4&quot; type=&quot;video/mp4&quot; &gt;
 &lt;/video&gt;
 
 &lt;script&gt;
@@ -295,7 +295,7 @@ window.compressor();
 	(if: $guessDoorCode&#39;s (1) is &quot;father&quot;)[
 	&lt;!-- The video --&gt;
 &lt;video autoplay id=&quot;myVideo&quot; playsinline&gt;
-  &lt;source src=&quot;https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/R%20FATHER.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
+  &lt;source src=&quot;R%20FATHER.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
 &lt;/video&gt;
 &lt;script&gt;
 window.compressor();
@@ -303,7 +303,7 @@ window.compressor();
 	](else-if: $guessDoorCode&#39;s (1) is &quot;son&quot;)[
 		&lt;!-- The video --&gt;
 &lt;video autoplay id=&quot;myVideo&quot; playsinline&gt;
-  &lt;source src=&quot;https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/R%20SON.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
+  &lt;source src=&quot;R%20SON.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
 &lt;/video&gt;
 &lt;script&gt;
 window.compressor();
@@ -311,7 +311,7 @@ window.compressor();
 	](else:)[
 	&lt;!-- The video --&gt;
 &lt;video autoplay id=&quot;myVideo&quot; playsinline&gt;
-  &lt;source src=&quot;https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/R%20GHOST.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
+  &lt;source src=&quot;R%20GHOST.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
 &lt;/video&gt;
 &lt;script&gt;
 window.compressor();
