Trying to fix iOS audio

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ window.compressor();
 let button = document.getElementById(&#39;myButton&#39;);
 
 // Add the click event listener
-button.onclick = window.startComp() {alert(&#39;Button clicked!&#39;);};
+button.onclick = window.startComp();
 &lt;/script&gt;
 [[Start]]
 
