--- a/IOS SOTC COMPRESSOR EXPERIMENT BEST ATTEMPT.html
+++ b/IOS SOTC COMPRESSOR EXPERIMENT BEST ATTEMPT.html
@@ -162,22 +162,40 @@ background: radial-gradient(circle at 50% 50%, rgba(38, 38, 38, 0.84) 99%, rgba(
   100% {opacity: 1;}
 }
 
-</style><script role="script" id="twine-user-script" type="text/twine-javascript">//Setting up the background music
-window.audioElement = new Audio("https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/freaky%20music.mp3");
-audioElement.autoplay = true; // Auto play on the index page
-audioElement.id = "myAudio";
-audioElement.crossOrigin = 'anonymous';
-audioElement.loop = true; // Optional, depending on your requirements
+</style><script role="script" id="twine-user-script" type="text/twine-javascript">window.startComp = function()
+{
+window.startComp = function() {
+    // Ensure that the AudioContext is created after a user interaction
+    let audioElement = new Audio("freaky%20music.mp3");
+    audioElement.autoplay = false; // Disable autoplay to trigger on user interaction
+    audioElement.id = "myAudio";
+    audioElement.crossOrigin = 'anonymous'; // for local testing
+    audioElement.loop = true; // Optional, if you want it to loop
 
-// Create the AudioContext
-const audioContext = new (window.AudioContext || window.webkitAudioContext)();
-window.audioContext = audioContext;
+    // Create the AudioContext
+    const audioContext = new (window.AudioContext || window.webkitAudioContext)();
+    window.audioContext = audioContext;
 
-//Create nodes to affect the gain of the audio 
+    // Create nodes to affect the gain of the audio
     const gainNode2 = audioContext.createGain();
-    const videoSource = audioContext.createMediaElementSource(window.audioElement);
+    const videoSource = audioContext.createMediaElementSource(audioElement);
     videoSource.connect(gainNode2);
     gainNode2.connect(audioContext.destination);
+
+    // Ensure AudioContext is resumed before starting audio
+    if (audioContext.state === 'suspended') {
+        audioContext.resume();
+    }
+
+    // Play the audio after the AudioContext has been resumed
+    audioElement.play().catch((error) => {
+        console.log("Error starting audio: ", error);
+    });
+
+    window.audioElement = audioElement;
+};
+
+}
 
 //Method for compression
 window.compressor = function()
@@ -252,6 +270,9 @@ const video1 = document.getElementById('myVideo');
 (set: $guessDoorCode to (a:))
 
 </tw-passagedata><tw-passagedata pid="2" name="Start" tags="" position="925,325" size="100,100">{{{
+&lt;script&gt;
+window.startComp();
+&lt;/script&gt;
 
 &lt;!-- The video --&gt;
 &lt;video autoplay id=&quot;myVideo&quot; playsinline&gt;
@@ -282,8 +303,8 @@ const video1 = document.getElementById('myVideo');
 
 (if: $guessDoorCode is (a:))[
 &lt;!-- The video --&gt;
-&lt;video id=&quot;myVideo&quot; autoplay playsinline crossorigin=&quot;anonymous&quot;&gt;
-  &lt;source src=&quot;https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/DUCKY.mp4&quot; type=&quot;video/mp4&quot; &gt;
+&lt;video id=&quot;myVideo&quot; autoplay playsinline&gt;
+  &lt;source src=&quot;DUCKY.mp4&quot; type=&quot;video/mp4&quot; &gt;
 &lt;/video&gt;
 
 &lt;script&gt;
@@ -295,7 +316,7 @@ window.compressor();
 	(if: $guessDoorCode&#39;s (1) is &quot;father&quot;)[
 	&lt;!-- The video --&gt;
 &lt;video autoplay id=&quot;myVideo&quot; playsinline&gt;
-  &lt;source src=&quot;https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/R%20FATHER.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
+  &lt;source src=&quot;R%20FATHER.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
 &lt;/video&gt;
 &lt;script&gt;
 window.compressor();
@@ -303,7 +324,7 @@ window.compressor();
 	](else-if: $guessDoorCode&#39;s (1) is &quot;son&quot;)[
 		&lt;!-- The video --&gt;
 &lt;video autoplay id=&quot;myVideo&quot; playsinline&gt;
-  &lt;source src=&quot;https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/R%20SON.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
+  &lt;source src=&quot;R%20SON.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
 &lt;/video&gt;
 &lt;script&gt;
 window.compressor();
@@ -311,7 +332,7 @@ window.compressor();
 	](else:)[
 	&lt;!-- The video --&gt;
 &lt;video autoplay id=&quot;myVideo&quot; playsinline&gt;
-  &lt;source src=&quot;https://github.com/cpmmckeown/TwineVideoLecture2025/raw/refs/heads/main/R%20GHOST.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
+  &lt;source src=&quot;R%20GHOST.mp4&quot; type=&quot;video/mp4&quot; playsinline&gt;
 &lt;/video&gt;
 &lt;script&gt;
 window.compressor();
@@ -388,7 +409,8 @@ window.compressor();
 
 }}}</tw-passagedata><tw-passagedata pid="9" name="Splash Screen" tags="" position="875,175" size="100,100">This is here so that autoplay audio will work
 
-&lt;!--Don&#39;t forget to start the local server &quot;node server.js&quot; in scratch folder--&gt;
+&lt;!--Don&#39;t forget, if testing locally, to start a local server such as by using NodeJS &quot;node server.js&quot; from CMD within the Twine scratch folder--&gt;
+&lt;button onclick=&quot;window.startComp()&quot; id=&quot;startMusicButton&quot;&gt;Start Music on iOS&lt;/button&gt;
 [[Start]]
 
 
