made some small changes to the JS in Twine

--- a/index.html
+++ b/index.html
@@ -411,7 +411,11 @@ window.compressor();
 (if: $guessDoorCode&#39;s length is 3)[(after:5s)[(go-to:&quot;Start&quot;)]]
 (after:6s)[(go-to:&quot;Pray&quot;))]
 
-}}}</tw-passagedata><tw-passagedata pid="9" name="Splash Screen" tags="" position="875,175" size="100,100">This is here so that autoplay audio will work
+}}}</tw-passagedata><tw-passagedata pid="9" name="Splash Screen" tags="" position="875,175" size="100,100">This is a small test to show the potential of a sidechain compressor in and interactive film in Twine. 
+
+The game uses a simple array as the basis of a puzzle. There is constant background music playing throughout (a feature missing from software such as Stornaway) but when characters speak their dialogue &#39;punches through&#39; due to a simple pseudo-sidechain compressor in the project&#39;s JS file visible most easily in Twine. 
+
+Current issues: at present the project simply does not work on mobile devices or iOS and I&#39;m trying to figure out why. If you happen to stumble upon this and know why, please contact me at cpmmckeown@gmail.com!
 
 &lt;!--Don&#39;t forget, if testing locally, to start a local server such as by using NodeJS &quot;node server.js&quot; from CMD within the Twine scratch folder--&gt;
 &lt;button onclick=&quot;window.startComp()&quot; id=&quot;startMusicButton&quot;&gt;Start Music on iOS&lt;/button&gt;
