--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <body>
   <!--THE CSS FOR THIS IS FIXED SO NOT IN THE CASCADE-->
-  <video playsinline autoplay id="myVideo">
+  <video playsinline id="myVideo">
     <source src="" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
-<audio id='myAudio'><source src="FMUS.mp3"></audio> 
+<audio id='myAudio' controls><source src="FMUS.mp3"></audio> 
 
 <div class="topContent" id="topContent">
   </div>
