--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <!--THE CSS FOR THIS IS FIXED SO NOT IN THE CASCADE-->
-  <video playsinline id="myVideo">
+  <video playsinline muted id="myVideo">
     <source src="" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
