iOS Can Go To Hell

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <source src="" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
-<audio id='myAudio' controls><source src="FMUS.mp3"></audio> 
+<audio id='myAudio'><source src="FMUS.mp3"></audio> 
 
 <div class="topContent" id="topContent">
   </div>
